--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE.html>
 <head>
     <Baeksoo> My New Website </Baeksoo>
-    <meta name="description"
-         content= "Welcome to Baeksoo"/>
+    <meta name="description" content= "Welcome to Baeksoo"/>
+    <meta name="google-site-verification" content="r2_DuAetig7N-To9o8Ex2tzhkJ6LskCwNhRi2QPv4ww" />
+    
 </head>
 <body>
   <h1> Hi, I'm Rose. </h1>
